# mitsuba2-transient-nlos

./: .gitmodules  CMakeLists.txt  README.md  installpytorch.sh  mitsuba.conf
ext/: CMakeLists.txt
ext/rgb2spec/: CMakeLists.txt
include/mitsuba/core/: bitmap.h  logger.h  rfilter.h
include/mitsuba/python/: docstr.h
include/mitsuba/render/: emitter.h  endpoint.h  scene.h  streakimageblock.h
scenes/: transient_scene.xml
src/: CMakeLists.txt
src/emitters/: envmap.cpp  projector.cpp
src/films/: CMakeLists.txt  streakhdrfilm.cpp
src/integrators/: transientpath.cpp
src/libcore/: util.cpp
src/librender/: endpoint.cpp  integrator.cpp  sampler.cpp  scene.cpp  shape.cpp  streakimageblock.cpp  texture.cpp  transientintegrator.cpp
src/librender/python/: endpoint_v.cpp  scene_v.cpp
src/spectra/: irregular.cpp  regular.cpp  uniform.cpp
src/textures/: constant3d.cpp
